Fixed horizontal scroll and date format

--- a/src/CoreDataStore.Web/src/less/app.less
+++ b/src/CoreDataStore.Web/src/less/app.less
@@ -553,6 +553,10 @@ body > .ui-select-bootstrap.open {
   margin: 10px 0;
 }
 
+.details-form {
+  overflow-x: hidden;
+}
+
 .lpc-mobile-form {
   img {
     width: 100%;
